Simplified the response